src/test/test-models/bad/continue5.stan
// tests correct value passed from functions
functions {
  int foo(int n) {
    continue;
  }
}
model {
}

